<resources>
    <string name="app_name">Kumu</string>
    <string name="username_field">Username</string>
    <string name="password_field">Password</string>
    <string name="login_button">Login</string>
    <string name="species_field">Species Name</string>
    <string name="step_1">Step 1: What rare plant species are you reporting?</string>
    <string name="next_button">Next</string>
    <string name="step_2">Step 2: Please upload up to 10 images of the plant.</string>
    <string name="save_for_later">Finish Later</string>
    <string name="section_1">General Information</string>
    <string name="section_2">Population Structure</string>
    <string name="section_3">Individual Plant Data</string>
    <string name="section_4">Population Data</string>
    <string name="section_5">Habitat Characteristics</string>
    <string name="section_6">Threats</string>
    <string name="wild_or_outplanted">Wild or Outplanted</string>
    <string-array name="status_array">
        <item>Wild</item>
        <item>Outplanted</item>
        <item>InterSitu (i.e. Garden, Seed, Orchard)</item>
    </string-array>
    <string name="taxon_name">Taxon Name</string>
    <string name="observed_by">Observer Name</string>
    <string name="org_name">Organization Name</string>
    <string name="island">Island</string>
    <string-array name="islands">
        <item>Hawaii</item>
        <item>Maui</item>
        <item>Oahu</item>
        <item>Molokai</item>
        <item>Kauai</item>
        <item>Niihau</item>
        <item>Lanai</item>
        <item>Kahoolawe</item>
    </string-array>
    <string name="area_code">Population Reference Area (3 letter code)</string>
    <string name="ref_site">Populatiion Reference Site (A-Z)</string>
    <string name="location_notes">Location Notes</string>
    <string name="elevation">Elevation (feet)</string>
    <string name="population_structure">Are you Entering Population Structure? (Total number of plants on site)</string>
    <string name="mature_plants">Number of Mature Plants</string>
    <string name="immature_plants">Number of Immature Plants</string>
    <string name="seedlings">Number of Seedlings</string>
    <string name="individual_plant">Are you Collecting Data on an Individual Plant?</string>
    <string name="plant_number">Individual Plant Number</string>
    <string name="plant_tagged">This Plant is Tagged</string>
    <string name="plant_gender">Sex</string>
    <string-array name="plant_genders">
        <item>Unknown</item>
        <item>Male</item>
        <item>Female</item>
        <item>Both Male and Female</item>
        <item>Perfect Flowers (Hermaphrodite)</item>
        <item>N/A</item>
        <item>Male?</item>
        <item>Female?</item>
    </string-array>
    <string name="plant_height">Plant Height (Meters)</string>
    <string name="plant_diameter">Basal Diameter (Centimeters)</string>
    <string name="plant_age">Age</string>
    <string-array name="plant_ages">
        <item>Mature</item>
        <item>Immature</item>
        <item>Seedling (With Cotyledons)</item>
    </string-array>
    <string name="plant_reproductive">Reproductive Status</string>
    <string-array name="reproductive_statuses">
        <item>Vegetative (No flowers, buds, or fruit)</item>
        <item>Flower Buds</item>
        <item>Immature Fruit</item>
        <item>Mature Fruit</item>
        <item>Dormant</item>
    </string-array>
    <string name="plant_vigor">Vigor</string>
    <string-array name="vigors">
        <item>Healthy</item>
        <item>Moderate</item>
        <item>Poor</item>
        <item>Dead</item>
    </string-array>
    <string name="plant_immature_fruit">Amount of Immature Fruit Collected</string>
    <string name="plant_mature_fruit">Amount of Mature Fruit Collected</string>
    <string name="plant_cuttings">Amount of Cuttings Collected</string>
    <string name="plant_air_layers">Amount of Air Layers Collected</string>
    <string name="plant_flowers">Amount of Flowers Collected</string>
    <string name="population_data">Are you Entering Population Data?</string>
    <string name="population_phenology">Population Phenology</string>
    <string name="population_phenology_vegetative">% of Plants Vegetative</string>
    <string name="population_phenology_buds">% of Plants with Flower Buds</string>
    <string name="population_phenology_flower">% of Plants in Flower</string>
    <string name="population_phenology_fruit">% of Plants with Fruit</string>
    <string name="population_phenology_mature_fruit">% of Plants with Mature Fruit</string>
    <string name="population_condition">Population Condition</string>
    <string name="population_condition_plants_healthy">% of Plants Healthy</string>
    <string name="population_condition_plants_moderate">% of Plants Moderate</string>
    <string name="population_condition_plants_poor">% of Plants Poor</string>
    <string name="population_condition_plants_dead">% of Plants Dead</string>
    <string name="population_light_level">Light Level</string>
    <string name="population_light_level_full">% of Plants in Full Sun</string>
    <string name="population_light_level_partial">% of Plants in Partial Sun</string>
    <string name="population_light_level_partialshade">% of Plants in Partial Shade</string>
    <string name="population_light_level_deepshade">% of Plants in Deep Shade</string>
    <string name="habitat_characteristics">Are you Entering Habitat Characteristics?</string>
    <string name="habitat_overstory_closure">Overstory Closure</string>
    <string-array name="observatory_closures">
        <item>Closed 75 to 100%</item>
        <item>Intermediate 25 to 75%</item>
        <item>Open 0 to 25%</item>
    </string-array>
    <string-array name="observatory_heights">
        <item>2 to 5m</item>
        <item>5 to 10m</item>
        <item>10m or more</item>
    </string-array>
    <string-array name="understory_closures">
        <item>Closed 75 to 100%</item>
        <item>Intermediate 25 to 75%</item>
        <item>Open 0 to 25%</item>
    </string-array>
    <string-array name="soil_drainage">
        <item>Well</item>
        <item>Moderate</item>
        <item>Poor</item>
        <item>Hydric</item>
    </string-array>
    <string-array name="topography">
        <item>Crest</item>
        <item>Upper Slope</item>
        <item>Mid Slope</item>
        <item>Lower Slope</item>
        <item>Gulch Bottom</item>
        <item>Plateau-Flat</item>
    </string-array>
    <string-array name="aspect">
        <item>North</item>
        <item>NorthEast</item>
        <item>East</item>
        <item>SouthEast</item>
        <item>South</item>
        <item>SouthWest</item>
        <item>West</item>
        <item>NorthWest</item>
        <item>None</item>
    </string-array>
    <string-array name="substrate">
        <item>A'a</item>
        <item>Pahoehoe</item>
        <item>Soil</item>
        <item>Rock Talus</item>
        <item>Sand</item>
    </string-array>
    <string name="habitat_overstory_height">Overstory Height</string>
    <string name="habitat_understory_closure">Overstory Height</string>
    <string name="habitat_soil_drainage">Soil Drainage</string>
    <string name="habitat_topography">Topography</string>
    <string name="habitat_aspect">Aspect</string>
    <string name="habitat_associated_overstory_species">Associated Overstory Species</string>
    <string name="habitat_associated_understory_species">Associated Understory Species</string>
    <string name="habitat_substrate">Substrate</string>
    <string name="threats">Are you entering Threats?</string>
    <string name="threats_management">Threats and Management</string>
    <string-array name="threat_types">
        <item>Pigs</item>
        <item>Goats</item>
        <item>Deer</item>
        <item>Sheep</item>
        <item>Cattle</item>
        <item>Weeds</item>
        <item>Landslides</item>
        <item>Anthropods</item>
        <item>Pathogen</item>
        <item>Other</item>
    </string-array>
    <string name="threats_notes">Threat and Management Notes</string>
    <string name="title_activity_map">Map</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>